--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,27 @@
+.pdf-container {
+    width: 100%;
+    position: relative;
+    padding-bottom: 141.42%; /* Aspect ratio for A4 page size (1.4142) */
+    height: 0;
+    overflow: hidden;
+}
+
+.pdf-container object {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Media query for mobile devices */
+@media screen and (max-width: 767px) {
+    .pdf-container {
+        padding-bottom: 200%; /* Adjust to desired aspect ratio for mobile devices */
+    }
+}
+
+
 
 h1 {
     text-align: center;
