--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
+/* Responsive PDF container */
 .pdf-container {
-    width: 100%;
     position: relative;
-    padding-bottom: 141.42%; /* Aspect ratio for A4 page size (1.4142) */
+    padding-bottom: 100%;
     height: 0;
     overflow: hidden;
 }
 
+/* PDF object styling */
 .pdf-container object {
     position: absolute;
     top: 0;
@@ -15,13 +16,11 @@
 }
 
 /* Media query for mobile devices */
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
     .pdf-container {
-        padding-bottom: 200%; /* Adjust to desired aspect ratio for mobile devices */
+        padding-bottom: 150%; /* Adjust this value to fit the PDF on smaller screens */
     }
 }
-
-
 
 h1 {
     text-align: center;
